fix textarea alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,10 @@ textarea{
   resize: none;
   color: #000000;
   border-left: 1px solid black;
-  padding: 10px;
+  padding: 0px;
+  width: 100%;
+  height: 100%;
+  margin-top: -30px;
 }
 
 .jumbotron {
